@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Fixed
 - [CLUSTER] [PF] Correctly reload configurations when changing SSH/GUI access rules
+- [API_PARSER] [CYBEREASON] Update timestamp when no logs are received during the last 24h
 
 
 ## [2.15.10] - 2024-08-09
